# puyovs

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  PKGBUILD  PuyoVS.pro  README.md  com.puyovs.client.yaml  flake.nix
.github/workflows/: compile.yml
Assets/Data/Lobby/: Settings.json
Assets/Language/: ChineseSimplified.json  English.json  French.json  Korean.json  Spanish.json
Assets/User/Backgrounds/Forest/Animation/: animation.xml  ready.xml
Audiolib/: Audiolib-conf.pri  Audiolib.pri  Audiolib.pro  CMakeLists.txt  COPYING  LICENSE.isc  LICENSE.lgpl  alibint.h  audiolib.cpp  buffer.cpp  fast_mutex.h  minimp3.c  minimp3.h  minivorbis.cpp  minivorbis.h  mixer.cpp  resampler.cpp  ringbuffer.cpp  samplereader.cpp  samplereader.h  stream.cpp  tinythread.h
Audiolib/include/alib/: audiolib.h  buffer.h  common.h  mixer.h  resampler.h  ringbuffer.h  sample.h  stream.h
Audiolib/readers/: pcmreader.cpp  pcmreader.h  vgmreader.cpp  vgmreader.h  vorbisreader.cpp  vorbisreader.h
Audiolib/speex/: arch.h  fixed_arm4.h  fixed_arm5e.h  fixed_bfin.h  fixed_debug.h  fixed_generic.h  resample.c  speex_resampler.h  speex_types.h  stack_alloc.h
Audiotest/: Audiotest.pro  CMakeLists.txt  main.cpp
BuildScripts/MacOSX/: macx-post-link.sh
BuildScripts/WindowsPowershell/: common_build_powershell.ps1  lightweight_build_powershell.ps1
CMake/: FindZLIB.cmake  Findspng.cmake
CMakeModules/: FindZLIB.cmake  Findspng.cmake
Client/: CMakeLists.txt  Client.pro  Info.plist.in  admindialog.cpp  admindialog.h  admindialog.ui  chatroomform.cpp  chatroomform.h  chatroomform.ui  chatroomtextedit.cpp  chatroomtextedit.h  chattextentry.cpp  chattextentry.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.aps  client.qrc  client.rc  common.cpp  common.h  createchatroomdialog.cpp  createchatroomdialog.h  createchatroomdialog.ui  ffontgl.cpp  ffontgl.h  fimagegl.cpp  fimagegl.h  frontendgl.cpp  frontendgl.h  fshadergl.cpp  fshadergl.h  fsoundalib.cpp  fsoundalib.h  gameaudio.cpp  gameaudio.h  gamemanager.cpp  gamemanager.h  gamewidget.cpp  gamewidget.h  (+64 more)
ClientNG/: CMakeLists.txt  Font.cpp  Font.h  Game.cpp  Game.h  PTSans.cpp  PTSans.h  Paths.cpp  Paths.h  main.cpp
ClientNG/Renderers/: Renderer.cpp  Renderer.h
ClientNG/Renderers/OpenGL/: OpenGL.cpp  OpenGL.h
ClientNG/Renderers/Software/: Software.cpp  Software.h
ClientNG/Scenes/: Scene.h
ClientNG/Scenes/Game/: Frontend.cpp  Frontend.h  InGame.cpp  InGame.h  MusicPlayer.cpp  MusicPlayer.h
ClientNG/Scenes/Intro/: IntroLogo.cpp  IntroLogo.h  IntroNotes.cpp  IntroNotes.h  Logo.cpp  Logo.h
Contrib/BuildScripts/WindowsPowershell/: common_build_powershell.ps1  lightweight_build_powershell.ps1
ENet/: CMakeLists.txt  ENet.pri  ENet.pro  host.c
Inputlib/: CMakeLists.txt  Inputlib-conf.pri  Inputlib.pri  Inputlib.pro  driver.cpp  js2format.h
Inputlib/drivers/: dinputdriver.cpp  dinputdriver.h  nulldriver.cpp  nulldriver.h  sdldriver.cpp  sdldriver.h
Inputlib/include/ilib/: driver.h  inputevent.h  inputlib.h
Inputtest/: CMakeLists.txt  Inputtest.pro  main.cpp
JsonCpp/: JsonCpp.pri
PVS_ENet/: CMakeLists.txt  PVS_Channel.cpp  PVS_Channel.h  PVS_Client.cpp  PVS_Client.h  PVS_ENet.pri  PVS_ENet.pro  PVS_Packet.cpp  PVS_Packet.h  PVS_Peer.cpp  PVS_Peer.h  PVS_Server.cpp  PVS_Server.h
Puyolib/: AI.cpp  AI.h  Animation.cpp  Animation.h  AssetBundle.cpp  AssetBundle.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  CharacterSelect.cpp  CharacterSelect.h  Controller.cpp  Controller.h  DebugLog.cpp  DebugLog.h  DropPattern.cpp  DropPattern.h  FeverCounter.cpp  FeverCounter.h  Field.cpp  Field.h  FieldProp.h  Frontend.h  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  GameSettings.cpp  GameSettings.h  Menu.cpp  Menu.h  MovePuyo.cpp  MovePuyo.h  NextPuyo.cpp  NextPuyo.h  OtherObjects.cpp  OtherObjects.h  Player.cpp  Player.h  PlayerRenderer.cpp  (+66 more)
Puyolib/RNG/: ClassicPool.cpp  ClassicPool.h  ClassicPuyoRNG.cpp  ClassicPuyoRNG.h  ClassicPuyoRng.cpp  ClassicPuyoRng.h  ClassicRNG.cpp  ClassicRNG.h  ClassicRng.cpp  ClassicRng.h  LegacyPuyoRNG.cpp  LegacyPuyoRNG.h  LegacyPuyoRng.cpp  LegacyPuyoRng.h  MersenneTwister.cpp  MersenneTwister.h  PuyoRNG.cpp  PuyoRNG.h  PuyoRng.cpp  PuyoRng.h
Puyolib/RuleSet/: RuleSet.cpp  RuleSet.h
SDL/: CMakeLists.txt  SDL.pri  SDL.pro
SDL/dxsdk/include/: dsound.h
SDL/include/: SDL_config.h  SDL_config_linux.h  SDL_config_macosx.h  SDL_config_windows.h  SDL_test.h  begin_code.h
SDL/src/audio/directsound/: SDL_directsound.c
SDL/src/audio/pulseaudio/: SDL_pulseaudio.c
SDL/src/audio/winmm/: SDL_winmm.c
SDL/src/joystick/linux/: SDL_sysjoystick.c
SDL/src/test/: SDL_test_log.c
Test/: puyovs.conf
Test/Data/Lobby/: Settings.json
Test/Language/: ChineseSimplified.json  Czech.json  English.json  French.json  Japanese.json  Korean.json  Spanish.json
VgmStream/: CMakeLists.txt  VgmStream-conf.pri  VgmStream.pri  VgmStream.pro  readme.txt
VgmStream/src/: libvgmstream.vcproj  streamtypes.h  vgmstream.h
VgmStream/src/meta/: fsb.c  ogg_vorbis_file.c  ps2_mib.c
Zlib/: CMakeLists.txt  Zlib.pri  Zlib.pro  gzguts.h  gzlib.c  gzread.c  gzwrite.c
