include_directories(../Zlib)
add_library(Puyolib
    tinyxmlparser.cpp
    tinyxmlerror.cpp
    tinyxml.cpp
    tinystr.cpp
    Sprite.cpp
    Sound.cpp
    "RuleSet/RuleSet.cpp"
    Puyo.cpp
    Player.cpp
    OtherObjects.cpp
    NextPuyo.cpp
    MovePuyo.cpp
    Menu.cpp
    main.cpp
    global.cpp
    GameSettings.cpp
    Game.cpp
    Field.cpp
    FeverCounter.cpp
    DropPattern.cpp
    Controller.cpp
    CharacterSelect.cpp
    Animation.cpp
    AI.cpp
    RNG/ClassicPool.cpp
    RNG/ClassicPuyoRNG.cpp
    RNG/ClassicRNG.cpp
    RNG/LegacyPuyoRNG.cpp
    RNG/MersenneTwister.cpp
    RNG/PuyoRNG.cpp
)

target_compile_features(Puyolib PUBLIC cxx_std_17)
